--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
  
 
 <footer class="page-footer font-small blue" id="foot">
-    <nav> <a href="#"><div>Home</div></a> <a href="#"><div>About</div></a> <a href="#"><div>Contact</div></a> <a href="#"><div>Terms and Conditions</div></a> </nav> </br>
+    <nav> <a href="#"><div>Home</div></a> <a href="#"><div>About</div></a> <a href="#"><div>Contact</div></a> <a href="#"><div>Terms and Conditions</div></a> </nav> 
    <font color="red">Copeyright©2019</font>
    
 </footer>
