--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </br>
 <div id="rs"><script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2051_RC01/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderWidget("dailytrends", "", {"geo":"IN","guestPath":"https://trends.google.com:443/trends/embed/"}); </script> 
 
-</div>
+</div> </br></br>
  
 
 <footer class="page-footer font-small blue" id="foot">
