--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div> </br></br>
  
 
-<footer class="page-footer font-small blue" id="foot"> </br>
+<footer class="page-footer font-small blue" id="foot"> </br> </br>
     <nav> <a href="#"><div>Home</div></a> <a href="#"><div>About</div></a> <a href="#"><div>Contact</div></a> <a href="#"><div>Terms and Conditions</div></a> </nav> 
    <font color="red">Copeyright©2019</font>
    
