--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <header id="a">
     <img src="https://lh5.googleusercontent.com/proxy/49cef-E6dBGFu3oJoM2t8xFF9evk0RMR7nszw_LXheeA1v_llg79JZdlU6YIKBzBFlJ2H-pnsywwG03bPq1c0NySBrQj1RzzEWiHAMhK5n_YnFpoIiy70sy7zqXLaGB7ecmL=w300-h300">
     </header> </br>
-    <a href="MyApp.apk" > Click to download </a>
+    <a href="NewProject2.apk" > Click to download </a>
     </body>
 </html>
